--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@baxibaba/react-audio-recorder": "^1.0.1",
+    "@emotion/react": "^11.10.4",
+    "@mantine/core": "^5.6.0",
+    "@mantine/hooks": "^5.6.0",
+    "@mantine/modals": "^5.6.0",
     "@mui-treasury/styles": "^1.13.1",
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.1",
@@ -12,7 +16,9 @@
     "@upsetjs/venn.js": "^1.4.2",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "install": "^0.13.0",
     "moment": "^2.29.4",
+    "npm": "^8.19.2",
     "react": "^16.0.2",
     "react-dom": "^16.0.2",
     "react-icons": "^4.3.1",
